# ai-in-business

./: .gitignore  README.md  fasttext.ipynb  logreg.ipynb  main.ipynb  preparation.py  pyproject.toml
