[tool.poetry]
name = "ai-in-buisness"
version = "0.1.0"
description = ""
authors = ["kurushin.fedor <kurushin.fedor@wb.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.1"
matplotlib = "^3.8.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
